--- a/style.css
+++ b/style.css
@@ -82,3 +82,18 @@ a{
 a:hover{
     color:#000000;
 }
+@media screen and (max-width:1024px) {
+.container{
+    flex-direction: column;
+    
+}
+.gallery{
+    width: 100%;
+    padding-inline: 12px;
+    grid-auto-rows:220px ;
+}
+.box{
+    grid-row: span 1;
+    grid-column: span 3;
+}
+}
